[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Arno Velds <avelds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
structopt = "0.3.20"
chrono = "0.4.19"
nom = "6.0.1"
tabular = "0.1.4"
thiserror = "1.0.22"
rayon = "1.5.0"
itertools = "0.9.0"
smallvec = "1.5.1"

[profile.release]
debug = true
