[package]
name = "aoc2023"
version = "0.1.0"
authors = ["Arno Velds <avelds@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
clap = { version = "4", features = ["derive"] }
chrono = "0.4.19"
nom = "7"
tabular = "0.2.0"
thiserror = "1.0.22"
rayon = "1.5.0"
itertools = "0.12.0"
smallvec = "1.5.1"
num = "0.4.1"
indexmap = "2.1.0"
ndarray = "0.15.6"

[profile.release]
debug = true
